instruments/AIOUSB/Headers/AIOUSB.cs

using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Runtime.InteropServices;

namespace AIOUSBNet
{
	public class AIOUSB // Prototype AIOUSB.dll data and functions in managed C# for .Net -- Watch for char arrays, UNICODE v ANSI, and strings
	{
		#region Constants for simplifying use of Device Index
		public const UInt32 diNone = 0xFFFFFFFF; // "-1"
		public const UInt32 diFirst = 0xFFFFFFFE; // "-2" First board (lowest DeviceIndex)
		public const UInt32 diOnly = 0xFFFFFFFD; // "-3" One and only board
		#endregion
		#region Constants for Win32 Error codes
		public const UInt32 ERROR_SUCCESS = 0;
		#endregion
		#region Constants, Misc
		public const UInt32 MAXNAMESIZE = 32;
		#endregion
		# region Constants related to AIOUSB_ClearFIFO() and similar
		public const UInt32 TIME_METHOD_NOW = 0;
		public const UInt32 TIME_METHOD_WAIT_INPUT_ENABLE = 86;
		public const UInt32 TIME_METHOD_NOW_AND_ABORT = 5;
		public const UInt32 TIME_METHOD_WHEN_INPUT_ENABLE = 1;
		#endregion
		#region General Board Discovery & Utility Functions

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 GetDevices();

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 QueryDeviceInfo(UInt32 DeviceIndex, ref UInt32 pPID, ref UInt32 pNameSize, IntPtr Name, ref UInt32 DIOBytes, ref UInt32 Counters);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 QueryDeviceInfo(UInt32 DeviceIndex, ref UInt32 pPID, ref UInt32 pNameSize, StringBuilder DEVName, ref UInt32 DIOBytes, ref UInt32 Counters);

		public static UInt32 QueryDeviceInformation(UInt32 DeviceIndex, out UInt32 pPID, out string Name, out UInt32 DIOBytes, out UInt32 Counters)
		{
			UInt32 Status;
			DIOBytes = 0; Counters = 0;
			StringBuilder strNameIn = new StringBuilder((Int32)(AIOUSB.MAXNAMESIZE) + 1);
			UInt32 NameSize = AIOUSB.MAXNAMESIZE;
			pPID = 0;

			Status = AIOUSB.QueryDeviceInfo(DeviceIndex, ref pPID, ref NameSize, strNameIn, ref DIOBytes, ref Counters);
			if (Status == AIOUSB.ERROR_SUCCESS)
			{
				strNameIn.Length = strNameIn.Capacity;
				Name = strNameIn.ToString(0, (Int32)(NameSize));
			}
			else
			{
				Name = "";
			}
			return Status;
		}

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 AIOUSB_ReloadDeviceLinks();

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ResolveDeviceIndex(UInt32 DeviceIndex);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 AIOUSB_CloseDevice(UInt32 DeviceIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ClearDevices();

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 AIOUSB_SetGlobalTickRate(UInt32 DeviceIndex, ref double pHz);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CustomEEPROMRead(UInt32 DeviceIndex, UInt32 StartAddress, ref UInt32 DataSize, out Byte[] Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 CustomEEPROMWrite(UInt32 DeviceIndex, UInt32 StartAddress, UInt32 DataSize, [In] Byte[] Data);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 GetDeviceByEEPROMByte(Byte Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 GetDeviceByEEPROMData(UInt32 StartAddress, UInt32 DataSize, [In] Byte[] pData);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 GetDeviceSerialNumber(UInt32 DeviceIndex, ref UInt64 pSerialNumber);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 AIOUSB_ClearFIFO(UInt32 DeviceIndex, UInt32 TimeMethod);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 AIOUSB_QuerySimplePNPData(UInt32 DeviceIndex, ref Byte[] pPNPData, ref UInt32 pPNPDataBytes);
		#endregion
		#region DIO (Digital I/O, Including FET, Relay, and Isolated Inputs) Specific Functions

		// DIO_Configure is overloaded for your convenience
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Configure(UInt32 DeviceIndex, Byte Tristate, ref UInt32 OutMask, ref UInt32 Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Configure(UInt32 DeviceIndex, Byte Tristate, ref UInt16 OutMask, [In] Byte[] Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Configure(UInt32 DeviceIndex, Byte Tristate, [In] Byte[] OutMask, [In] Byte[] Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Configure(UInt32 DeviceIndex, Byte Tristate, ref Byte OutMask, ref byte[] Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Configure(uint deviceIndex, Byte bTristateAll, ref uint outMask, ref byte[] Data);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Configure(uint deviceIndex, Byte bTristateAll, IntPtr outMask, IntPtr Data);

		public static UInt32 DIO_Configure(UInt32 DeviceIndex, UInt32 bTristateAll, Byte[] Outs, Byte[] Data)
		{
			IntPtr OutsPtr = Marshal.AllocHGlobal(Outs.Length);
			IntPtr DataPtr = Marshal.AllocHGlobal(Data.Length);
			UInt32 Status;

            try {
				Marshal.Copy(Outs, 0, OutsPtr, Outs.Length);
				Marshal.Copy(Data, 0, DataPtr, Data.Length);
				Status = DIO_Configure(DeviceIndex, Convert.ToByte(bTristateAll), OutsPtr, DataPtr);
			}
			finally
			{
				Marshal.FreeHGlobal(DataPtr);
				Marshal.FreeHGlobal(OutsPtr);
			}

			return Status;
		}

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_ConfigureEx(UInt32 DeviceIndex, [In] Byte[] pOutMask, [In] Byte[] pData, [In] Byte[] pTristateMask);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_StreamOpen(UInt32 DeviceIndex, UInt32 bIsRead);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_StreamClose(UInt32 DeviceIndex);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_StreamFrame(UInt32 DeviceIndex, UInt32 FramePoints, ref UInt16[] FrameData, out UInt32 BytesTransferred);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_StreamSetClocks(UInt32 DeviceIndex, ref double ReadClockHz, ref double WriteClockHz);



		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_ConfigureMasked(UInt32 DeviceIndex, [In] Byte[] pOuts, [In] Byte[] pOutsMask, [In] Byte[] pData, [In] Byte[] pDataMask, [In] Byte[] pTristates, [In] Byte[] pTristatesMask);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_ConfigurationQuery(UInt32 DeviceIndex, out Byte[] pOutMask, out Byte[] pTristateMask);



		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]

		// DIO_WriteAll is overloaded for your convenience
		public static extern UInt32 DIO_WriteAll(UInt32 DeviceIndex, ref UInt32 Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_WriteAll(UInt32 DeviceIndex, [In] Byte[] Data);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Write8(UInt32 DeviceIndex, UInt32 ByteIndex, Byte Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Write1(UInt32 DeviceIndex, UInt32 BitIndex, Byte Data);

		// DIO_ReadAll is overloaded for your convenience


		// [DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)] public static extern UInt32 DIO_ReadAll(UInt32 DeviceIndex, ref UInt32 Data);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		private static extern UInt32 DIO_ReadAll(UInt32 DeviceIndex, IntPtr Data);

		public static UInt32 DIO_ReadAll(UInt32 DeviceIndex, int DataLength, Byte[] Data)
		{
			Data = new Byte[DataLength];
			IntPtr outPtr = Marshal.AllocHGlobal(DataLength);
			UInt32 Status;
			try
			{
				Status = DIO_ReadAll(DeviceIndex, outPtr);
				Marshal.Copy(outPtr, Data, 0, DataLength);
			}
			finally
			{
				Marshal.FreeHGlobal(outPtr);
			}
			return Status;
		}
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_ReadAll(UInt32 DeviceIndex, ref UInt32 Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_ReadAll(UInt32 DeviceIndex,  Byte[] Data);

		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Read8(UInt32 DeviceIndex, UInt32 ByteIndex, ref Byte Data);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 DIO_Read1(UInt32 DeviceIndex, UInt32 BitIndex, out Byte Data);
		#endregion
		#region USB-DIO-16H Family-specific (streaming, fast) functions

		#endregion
		#region ADC (Analog Input (Analog-to-Digital)) Specific Functions
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_GetScanV(UInt32 DeviceIndex, Double[] pBuf);
		#region USB-AIx and DPK-AIx Family-Specific Functions
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_SetConfig(UInt32 DeviceIndex, [In] Byte[] pConfigBuf, ref UInt32 ConfigBufSize);
		[DllImport("AIOUSB.DLL", CharSet = CharSet.Ansi, CallingConvention = CallingConvention.Cdecl)]
		public static extern UInt32 ADC_GetConfig(UInt32 DeviceIndex, out Byte[] pConfigBuf, ref UInt32 ConfigBufSize);
